# git-sensei

./: CONTRIBUTING.md  Cargo.toml  README.md  benchmark.py
scripts/: reset.sh  test_ollama.sh
src/: config.rs  main.rs  util.rs
src/git/: bundler.rs  mod.rs  provider.rs
src/llm/: client.rs  mod.rs  prompt.rs
src/shell/: install.rs
